methods.picture.PictureMono3.scala.error
Erreur de compilation :
PictureMono3:2: error: Invalid literal number
  9Motif()
  ^PictureMono3:5: error: Invalid literal number
def 9Motif() {
    ^PictureMono3:2: error: illegal start of statement
  9Motif()
  ^PictureMono3:5: error: identifier expected but something found.
def 9Motif() {
    ^